# owasp-security-audit-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  audit.example.toml  contoh_requirements.txt  contoh_vulnerable.py  pyproject.toml  requirements.txt  test_checkers.py  test_connection.py  test_graph.py
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  ast_utils.py  base_checker.py  cli.py  config.py  dependency_scanner.py  graph.py  history.py  llm.py  models.py  registry.py  report.py  rule_fixer.py  sarif_exporter.py  state.py
agent/tools/: access_control_checker.py  auth_checker.py  crypto_checker.py  exception_checker.py  injection_checker.py  insecure_design_checker.py  integrity_checker.py  logging_checker.py  misconfig_checker.py  supply_chain_checker.py
tests/: conftest.py  test_ast_accuracy.py  test_ast_accuracy_extra.py  test_checkers_per_category.py  test_config.py  test_dependency_scanner.py  test_llm.py  test_pipeline.py  test_registry.py
