[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-audit-agent"
version = "0.3.0"
description = "Agentic AI framework untuk audit keamanan kode Python berbasis OWASP Top 10 (2025)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rio Nelson", email = "rionelson1802@gmail.com" }]
keywords = ["owasp", "security", "static-analysis", "sast", "langgraph", "agent", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "langgraph>=1.2,<2",
    "langchain-groq>=1.1,<2",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.0",
    "fpdf2>=2.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# UI Streamlit — opsional, tidak wajib untuk memakai library/CLI.
ui = ["streamlit>=1.50"]
dev = ["pytest>=8.0", "ruff>=0.6", "build>=1.0"]
# Provider LLM alternatif (groq sudah termasuk di dependencies inti).
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
google = ["langchain-google-genai>=2.0"]
ollama = ["langchain-ollama>=0.2"]

[project.urls]
Homepage = "https://github.com/Rio-Bewbew/owasp-security-audit-agent"
Repository = "https://github.com/Rio-Bewbew/owasp-security-audit-agent"
Issues = "https://github.com/Rio-Bewbew/owasp-security-audit-agent/issues"
Changelog = "https://github.com/Rio-Bewbew/owasp-security-audit-agent/blob/main/CHANGELOG.md"

[project.scripts]
owasp-audit = "agent.cli:main"

# ── Titik ekstensi framework ────────────────────────────────────────────────
# Checker internal ditemukan otomatis via scan agent/tools/.
# Plugin checker pihak ketiga cukup mendeklarasikan entry point pada group ini:
#
#   [project.entry-points."owasp_audit_agent.checkers"]
#   my_checker = "my_package.my_module:MyChecker"
#
# Registry akan memuatnya otomatis lewat registry.discover_entry_points().
[project.entry-points."owasp_audit_agent.checkers"]

[tool.setuptools]
packages = ["agent", "agent.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv", "contoh_vulnerable.py"]

[tool.ruff.lint]
# Fokus pada rule yang menangkap masalah nyata (pyflakes, bugbear, error).
# Rule gaya (isort/pyupgrade) sengaja tidak dipaksakan agar tidak mengubah
# gaya anotasi lama di seluruh basis kode.
select = ["E", "F", "B"]
ignore = ["E501"]   # panjang baris ditangani formatter, bukan error
